[package]
name = "rskafka"
version = "0.3.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = [
    "api",
    "async",
    "kafka",
    "protocol",
]
categories = ["api-bindings"]
description = " A minimal Rust client for Apache Kafka "
repository = "https://github.com/influxdata/rskafka/"
documentation = "https://docs.rs/rskafka/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-socks5 = { version = "0.5", default-features = false, optional = true }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1.5", default-features = false }
chrono = { version = "0.4", default-features = false }
crc32c = { version = "0.6", default-features = false }
flate2 = { version = "1", optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
integer-encoding = { version = "4", default-features = false }
lz4 = { version = "1.24", default-features = false, optional = true }
parking_lot = { version = "0.12", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rustls = { version = "0.22", default-features = false, optional = true }
snap = { version = "1", default-features = false, optional = true }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.35", default-features = false, features = ["io-util", "net", "rt", "sync", "time", "macros"] }
tokio-rustls = { version = "0.25", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false }
zstd = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }
chrono = { version = "0.4", default-features = false }
dotenvy = { version = "0.15", default-features = false }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
j4rs = { version = "0.17" }
once_cell = { version = "1.19", default-features = false }
procspawn = { version = "1.0", default-features = false }
proptest = { version = "1", default-features = false, features = ["std", "fork"] }
proptest-derive = { version = "0.4", default-features = false }
rustls-pemfile = { version = "2.0", default-features = false }
rdkafka = { version = "0.36", default-features = false, features = ["libz", "tokio", "zstd"] }
tokio = { version = "1.35", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-log = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "tracing-log"] }
uuid = { version = "1.6", default-features = false, features = ["v4"] }

[features]
default = [
    "compression-gzip",
    "compression-lz4",
    "compression-snappy",
    "compression-zstd",
]

full = [
    "compression-gzip",
    "compression-lz4",
    "compression-snappy",
    "compression-zstd",
    "transport-socks5",
    "transport-tls",
]

compression-gzip = ["flate2"]
compression-lz4 = ["lz4"]
compression-snappy = ["snap"]
compression-zstd = ["zstd"]

transport-socks5 = ["async-socks5"]
transport-tls = ["rustls", "tokio-rustls"]

unstable-fuzzing = []

[lib]
# For `cargo bench -- --save-baseline ...`
# See https://github.com/bheisler/criterion.rs/issues/275.
bench = false

[[bench]]
name = "throughput"
harness = false

[workspace]
members = [
    ".",
    "fuzz",
]

[profile.bench]
debug = true

# tune release profile for fuzzing
[profile.release]
debug = true

[package.metadata.docs.rs]
all-features = true
